# cognitoons

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
.cursor/rules/: code-quality.mdc  commit-cadence.mdc
benchmark/: comic_benchmark_v1.json
docs/build-logs/: _template.md  comicstrip-tutor-app.md  index.md
examples/outputs/benchmark-20260225T105101Z/: benchmark_result.json  leaderboard.html  leaderboard.md
examples/outputs/benchmark-20260225t105101z-agent_tool_use-gemini-2.5-flash-image/: manifest_gemini-2.5-flash-image.json  run_config.json  storyboard.json  storyboard_meta.json
examples/outputs/topic-rl-exploration/: run_config.json  (+8 more)
live-outputs/: README.md
runs/: experiment_registry.jsonl
src/comicstrip_tutor/: __init__.py  cli.py  config.py  constants.py  logging_utils.py  presets.py
tests/: test_artifact_store.py  test_bandit.py  test_cache.py  test_cli_smoke.py  test_composer.py  test_config.py  test_critique_engine.py  test_critique_rewrite_codes.py  test_early_stop.py  test_error_taxonomy.py  test_gemini_adapter.py  test_heuristic_scores.py  test_leaderboard_metrics.py  test_learning_effectiveness.py  test_model_probe.py  test_model_registry.py  test_presets.py  test_prompt_builder.py  test_quality_report.py  test_reliability.py  test_runs_schema.py  test_schemas.py  test_style_compiler.py  test_trend_report.py
tests/integration/: test_mock_benchmark_flow.py  test_mock_compare_flow.py  test_mock_render_flow.py  test_model_fallback.py  test_rate_run_feedback.py  test_render_cache_reuse.py  test_render_failure_manifest.py
(+290 files in other folders)
